# TOFEL-demo

./: .gitignore  README.md
backend/: .env.example  README.md  docker-compose.yml  main.py  pyproject.toml
backend/app/: app.py  auth.py  clients.py  config.py  database.py
backend/app/models/: __init__.py  analysis.py  question.py  recording.py
backend/app/routers/: analysis.py  questions.py  recordings.py
backend/app/schemas/: __init__.py  analysis.py  question.py  recording.py  sse.py
backend/app/services/: __init__.py  analysis_service.py  storage_service.py
backend/app/services/ai/: asr.py  llm.py  prompts.py
frontend/: .env.example  package-lock.json  package.json
frontend/src/: vite-env.d.ts
frontend/src/app/: App.tsx
frontend/src/app/components/auth/: ProtectedRoute.tsx
frontend/src/app/components/feedback/: index.ts  (+1 more)
frontend/src/app/pages/: AnalyzingPage.tsx  AuthPage.tsx  ConfirmationPage.tsx  DetailPage.tsx  PracticeLibraryPage.tsx  PracticePage.tsx  PrepPage.tsx  RecordingPage.tsx  ReportPage.tsx  index.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useAudioRecorder.ts  useQuestionAudio.ts
frontend/src/lib/: supabase.ts
frontend/src/services/: api.ts
frontend/src/styles/: tailwind.css  theme.css
supabase/: config.toml  init_storage.py  seed.sql  update_existing_recordings.sql
supabase/migrations/: 20251221000001_init_schema.sql  20251222000001_add_user_id_to_recordings.sql  20251223000001_migrate_to_recording_id.sql  20251224000001_add_question_metadata.sql  20251226000001_add_integrated_speaking_fields.sql
(+1 files in other folders)
