[project]
name = "backend"
version = "0.1.0"
description = "TOEFL Speaking Backend"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.124.4",
    "httpx>=0.28.1",
    "minio>=7.2.20",
    "openai>=1.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pydub>=0.25.1",
    "python-multipart>=0.0.20",
    "python-ulid>=3.1.0",
    "sqlalchemy[asyncio]>=2.0.45",
    "uvicorn[standard]>=0.38.0",
]

[tool.setuptools]
packages = ["app"]
